--- a/eggCoffee.html
+++ b/eggCoffee.html
@@ -28,16 +28,16 @@
                 <img class="side-img" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
             </a>
             <a class="panel-element" href="koriKohi.html">
-                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Kori-Kohi">
             </a>
             <a class="panel-element" href="affogato.html">
-                <img class="side-img" src="img/Affogato.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Affogato.jpg" alt="Affogato">
             </a>
             <a class="panel-selected" href="coffeeJelly.html">
-                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Coffee Jelly">
             </a>
             <a class="panel-element" href="eggCoffee.html">
-                <img class="side-img" src="img/Egg Coffee.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Egg Coffee.jpg" alt="Egg Coffee">
             </a>
         </div>
 
@@ -78,7 +78,10 @@
                         <li>Place your serving glass in a bowl of hot water.</li>
                         <li>Pour ⅔ of your coffee into the serving glass.</li>
                         <li>Add the entire egg mixture on top of the coffee.</li>
-                        <li>Let your serving glass sit in the water for a couple of minutes to let the egg cook.</li>
+                        <li>
+                            Let your serving glass sit in the water for a couple of 
+                            minutes to let the egg cook.
+                        </li>
                         <li>Remove your serving glass from the water.</li>
                         <li>Pour the rest of your coffee on top and let it soak through the egg!</li>
                     </ol>
