--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <p class="text text-center">
                 Welcome to Roast and Brew, where coffee lovers and aspiring baristas unite to embark on a flavorful journey through <br> 
                 the world of coffee crafting! Immerse yourself in a rich tapestry of aromatic blends and delectable brews as we curate <br>
-                an extensive collection of coffee recipes, each a testament to the art and science of the perfect cup. <br></p>
+                an extensive collection of coffee recipes, each a testament to the art and science of the perfect cup. <br>
+            </p>
         </div>
         <div class="flex-center flex-align-center">
             <img class="profile" src="/img/pfp.jpg" alt="profile">
