--- a/koriKohi.html
+++ b/koriKohi.html
@@ -28,16 +28,16 @@
                 <img class="side-img" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
             </a>
             <a class="panel-selected" href="koriKohi.html">
-                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Kori-Kohi">
             </a>
             <a class="panel-element" href="affogato.html">
-                <img class="side-img" src="img/Affogato.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Affogato.jpg" alt="Affogato">
             </a>
             <a class="panel-element" href="coffeeJelly.html">
-                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Coffee Jelly">
             </a>
             <a class="panel-element" href="eggCoffee.html">
-                <img class="side-img" src="img/Egg Coffee.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Egg Coffee.jpg" alt="Egg Coffee">
             </a>
         </div>
 
@@ -74,7 +74,8 @@
                         </li>
                         <li>
                             Allow coffee to cool a bit, then proceed to filling your ice cube tray with your coffee.
-                            Don't fill all the way to the top as the liquid will expand when frozen.</li>
+                            Don't fill all the way to the top as the liquid will expand when frozen.
+                        </li>
                         <li>Leave overnight (or until frozen).</li>
                         <li>Pour four to five ice cubes into a glass, depending on how strong you like your coffee.</li>
                         <li>Pour warm milk over ice cubes as desired!</li>
