--- a/affogato.html
+++ b/affogato.html
@@ -28,16 +28,16 @@
                 <img class="side-img" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
             </a>
             <a class="panel-element" href="koriKohi.html">
-                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Kori-Kohi">
             </a>
             <a class="panel-selected" href="affogato.html">
-                <img class="side-img" src="img/Affogato.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Affogato.jpg" alt="Affogato">
             </a>
             <a class="panel-element" href="coffeeJelly.html">
-                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Coffee Jelly">
             </a>
             <a class="panel-element" href="eggCoffee.html">
-                <img class="side-img" src="img/Egg Coffee.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Egg Coffee.jpg" alt="Egg Coffee">
             </a>
         </div>
 
@@ -63,7 +63,10 @@
                 <div id="Ingredients">
                     <h3>Ingredients</h3>
                     <ul class="text2">
-                        <li>1 shot espresso or 3 tbsp strong brewed coffee (Arabica is most recommended)</li>
+                        <li>
+                            1 shot espresso or 3 tbsp strong brewed coffee 
+                            (Arabica is most recommended)
+                        </li>
                         <li>
                             1-2 scoops ice cream of your desired flavour (vanilla, chocolate, and 
                             hazelnut are the most commonly used)
