--- a/coffeeJelly.html
+++ b/coffeeJelly.html
@@ -28,16 +28,16 @@
                 <img class="side-img" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
             </a>
             <a class="panel-element" href="koriKohi.html">
-                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Kori-Kohi">
             </a>
             <a class="panel-element" href="affogato.html">
-                <img class="side-img" src="img/Affogato.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Affogato.jpg" alt="Affogato">
             </a>
             <a class="panel-selected" href="coffeeJelly.html">
-                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Coffee Jelly">
             </a>
             <a class="panel-element" href="eggCoffee.html">
-                <img class="side-img" src="img/Egg Coffee.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Egg Coffee.jpg" alt="Egg Coffee">
             </a>
         </div>
 
@@ -87,7 +87,10 @@
                             gelatin is completely dissolved. 
                         </li>
                         <li>Transfer the mixture into a baking dish and allow it to completely cool.</li>
-                        <li>Refrigerate the mixture for about two to three hours, or until completely set.</li>
+                        <li>
+                            Refrigerate the mixture for about two to three hours, 
+                            or until completely set.
+                        </li>
                         <li>Enjoy according to your preference!</li>
                     </ol>
                 </div>
