--- a/dirtyHorchata.html
+++ b/dirtyHorchata.html
@@ -28,16 +28,16 @@
                 <img class="side-img" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
             </a>
             <a class="panel-element" href="koriKohi.html">
-                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Kori-Kohi.jpg" alt="Kori-Kohi">
             </a>
             <a class="panel-element" href="affogato.html">
-                <img class="side-img" src="img/Affogato.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Affogato.jpg" alt="Affogato">
             </a>
             <a class="panel-element" href="coffeeJelly.html">
-                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Coffee Jelly.jpg" alt="Coffee Jelly">
             </a>
             <a class="panel-element" href="eggCoffee.html">
-                <img class="side-img" src="img/Egg Coffee.jpg" alt="Dirty Horchata">
+                <img class="side-img" src="img/Egg Coffee.jpg" alt="Egg Coffee">
             </a>
         </div>
 
@@ -64,7 +64,10 @@
                         <li>⅓ cup honey or real maple syrup</li>
                         <li>2 tsp vanilla extract</li>
                         <li>1 tsp ground nutmeg</li>
-                        <li>1 ½ tsp ground cinnamon (add extra if you'd like to top your drink with more cinnamon)</li>
+                        <li>
+                            1 ½ tsp ground cinnamon 
+                            (add extra if you'd like to top your drink with more cinnamon)
+                        </li>
                         <li>4 cups milk</li>
                         <li>1 cup cold coffee or espresso</li>
                         <li>A pinch of salt</li>
@@ -75,15 +78,16 @@
                     <ol class="text2">
                         <li>
                             Place the rice and water in a large bowl. You can choose one of two options:
-                        <ul>
-                            <li>Soak the rice in steaming hot water for two hours.</li>
-                            <li>Soak the rice in room temperature water for eight hours or overnight.</li>
-                        </ul>
-                    </li>
-                    <li>Pour the rice and water into the blender. Blend until creamy.</li>
-                    <li>
-                        Add the honey or maple syrup, vanilla extract, nutmeg, cinnamon, and a pinch of salt.
-                        Blend until combined.</li>
+                            <ul>
+                                <li>Soak the rice in steaming hot water for two hours.</li>
+                                <li>Soak the rice in room temperature water for eight hours or overnight.</li>
+                            </ul>
+                        </li>
+                        <li>Pour the rice and water into the blender. Blend until creamy.</li>
+                        <li>
+                            Add the honey or maple syrup, vanilla extract, nutmeg, cinnamon, and a pinch of salt.
+                            Blend until combined.
+                        </li>
                         <li>Pour the mixture into a pitcher or jar. Add milk and stir.</li>
                         <li>Chill until ready to serve.</li>
                         <li>Pour horchata into a glass with ice.</li>
