--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="flex-center flex-column">
     <header>
         <a class="sep" href="index.html">
-            <div class="flex-center flex-align-center">
+            <div class="flex-center flex-align-end">
                 <img class="logo" src="img/coffee.png" alt="logo">
                 <h1 class="logo-text">Roast and Brew</h1>
             </div>
