--- a/koriKohi.html
+++ b/koriKohi.html
@@ -43,9 +43,12 @@
 
         <div class="right-panel flex flex-column">
             <div class="top-inner-panel flex">
-                <img class="full-image" src="img/Kori-Kohi.jpg" alt="Kori Kohi">
+                <div class="flex flex-column">
+                    <h3>Kori-Kohi</h3>
+                    <img class="full-image" src="img/Kori-Kohi.jpg" alt="Kori Kohi">
+                </div>
                 <div id="Description">
-                    <h3>Description</h3>
+                    <h3 class="underline">Description</h3>
                     <p class="text2">
                         Is UCC one of the cafés you frequent? If so, you're probably no stranger
                         to the magic that is Kori-Kohi: coffee cubes served with warm milk. It was 
@@ -56,7 +59,7 @@
             </div>
             <div class="inner-panel flex">
                 <div id="Ingredients">
-                    <h3>Ingredients</h3>
+                    <h3 class="underline">Ingredients</h3>
                     <ul class="text2">
                         <li>3 cups coffee</li>
                         <li>3 tbsp sweetener of choice (personally, I like muscovado)</li>
@@ -64,7 +67,7 @@
                     </ul>
                 </div>
                 <div id="Proceedure">
-                    <h3>Proceedure</h3>
+                    <h3 class="underline">Proceedure</h3>
                     <ol class="text2">
                         <li>Brew your coffee.</li>
                         <li>
