--- a/affogato.html
+++ b/affogato.html
@@ -43,9 +43,12 @@
 
         <div class="right-panel flex flex-column">
             <div class="top-inner-panel flex">
-                <img class="full-image" src="img/Affogato.jpg" alt="Affogato">
+                <div>
+                    <h3>Affogato</h3>
+                    <img class="full-image" src="img/Affogato.jpg" alt="Affogato">
+                </div>
                 <div id="Description">
-                    <h3>Description</h3>
+                    <h3 class="underline">Description</h3>
                     <p class="text2">
                         The Italian word “affogato” means “poached” or “drowned”;
                         and true to its name, this dessert refers to ice cream drowned 
@@ -61,7 +64,7 @@
             </div>
             <div class="inner-panel flex">
                 <div id="Ingredients">
-                    <h3>Ingredients</h3>
+                    <h3 class="underline">Ingredients</h3>
                     <ul class="text2">
                         <li>
                             1 shot espresso or 3 tbsp strong brewed coffee 
@@ -75,7 +78,7 @@
                     </ul>
                 </div>
                 <div id="Proceedure">
-                    <h3>Proceedure</h3>
+                    <h3 class="underline">Proceedure</h3>
                     <ol class="text2">
                         <li>Brew your coffee right before serving.</li>
                         <li>Place your ice cream in a glass.</li>
