--- a/coffeeJelly.html
+++ b/coffeeJelly.html
@@ -43,9 +43,12 @@
 
         <div class="right-panel flex flex-column">
             <div class="top-inner-panel flex">
-                <img class="full-image" src="img/Coffee Jelly.jpg" alt="coffee Jelly">
+                <div>
+                    <h3>Coffee Jelly</h3>
+                    <img class="full-image" src="img/Coffee Jelly.jpg" alt="coffee Jelly">
+                </div>
                 <div id="Description">
-                    <h3>Description</h3>
+                    <h3 class="underline">Description</h3>
                     <p class="text2">
                         The mere thought of coffee jelly takes me back to my childhood. 
                         We'd make coffee jelly to top our vanilla ice cream on hot afternoons; 
@@ -63,7 +66,7 @@
             </div>
             <div class="inner-panel flex">
                 <div id="Ingredients">
-                    <h3>Ingredients</h3>
+                    <h3 class="underline">Ingredients</h3>
                     <ul class="text2">
                         <li>1 box unflavoured gelatin</li>
                         <li>4 cups water</li>
@@ -72,7 +75,7 @@
                     </ul>
                 </div>
                 <div id="Proceedure">
-                    <h3>Proceedure</h3>
+                    <h3 class="underline">Proceedure</h3>
                     <ol class="text2">
                         <li>In a sauce pot, bring three cups of water to a boil.</li>
                         <li>Add instant coffee and sugar, and stir until dissolved.</li>
