--- a/dirtyHorchata.html
+++ b/dirtyHorchata.html
@@ -43,9 +43,12 @@
 
         <div class="right-panel flex flex-column">
             <div class="top-inner-panel flex">
-                <img class="full-image" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
+                <div>
+                    <h3>Dirty Horchata</h3>
+                    <img class="full-image" src="img/Dirty Horchata.jpg" alt="Dirty Horchata">
+                </div>
                 <div id="Description">
-                    <h3>Description</h3>
+                    <h3 class="underline">Description</h3>
                     <p class="text2">
                         The thought of horchatas always takes me back to La Union; 
                         my friends introduced me to this sweet cinnamon drink on my first trip there. 
@@ -57,7 +60,7 @@
             </div>
             <div class="inner-panel flex">
                 <div id="Ingredients">
-                    <h3>Ingredients</h3>
+                    <h3 class="underline">Ingredients</h3>
                     <ul class="text2">
                         <li>1 cup uncooked white rice</li>
                         <li>2 ½ cups water</li>
@@ -74,7 +77,7 @@
                     </ul>
                 </div>
                 <div id="Proceedure">
-                    <h3>Proceedure</h3>
+                    <h3 class="underline">Proceedure</h3>
                     <ol class="text2">
                         <li>
                             Place the rice and water in a large bowl. You can choose one of two options:
