--- a/eggCoffee.html
+++ b/eggCoffee.html
@@ -43,9 +43,12 @@
 
         <div class="right-panel flex flex-column">
             <div class="top-inner-panel flex">
-                <img class="full-image" src="img/Egg Coffee.jpg" alt="Egg Coffee">
+                <div class="flex flex-column">
+                    <h3>Egg Coffee</h3>
+                    <img class="full-image" src="img/Egg Coffee.jpg" alt="Egg Coffee">
+                </div>
                 <div id="Description">
-                    <h3>Description</h3>
+                    <h3 class="underline">Description</h3>
                     <p class="text2">
                         Yes, this list has not one, but two Vietnamese coffee recipes! 
                         Besides their <i>cà phê sua đá</i>, the Vietnamese are also well-known 
@@ -58,7 +61,7 @@
             </div>
             <div class="inner-panel flex">
                 <div id="Ingredients">
-                    <h3>Ingredients</h3>
+                    <h3 class="underline">Ingredients</h3>
                     <ul class="text2">
                         <li>1 cup Vietnamese coffee or any dark roast (Robusta is preferable)</li>
                         <li>3 tbsp condensed milk</li>
@@ -68,7 +71,7 @@
                     </ul>
                 </div>
                 <div id="Proceedure">
-                    <h3>Proceedure</h3>
+                    <h3 class="underline">Proceedure</h3>
                     <ol class="text2">
                         <li>Prepare your coffee.</li>
                         <li>
